@@ -1,86 +1,96 @@
-.\" Copyright (C) 2003 International Business Machines Corp.
-.\" This file is distributed according to the GNU General Public License.
-.\" See the file COPYING in the top level source directory for details.
-.\" 
-.de Sh \" Subsection
-.br
-.if t .Sp
-.ne 5
-.PP
-\fB\\$1\fR
-.PP
-..
-.de Sp \" Vertical space (when we can't use .PP)
-.if t .sp .5v
-.if n .sp
-..
-.de Ip \" List item
-.br
-.ie \\n(.$>=3 .ne \\$3
-.el .ne 3
-.IP "\\$1" \\$2
-..
-.TH "PAM_NOLOGIN" 8 "2003-03-21" "Linux 2.4" "System Administrator's Manual"
-.SH NAME
-pam_nologin \- Disables login for all except root when 
-\fI/etc/nologin\fR exists
-.SH "SYNOPSIS"
+.\"     Title: pam_nologin
+.\"    Author: 
+.\" Generator: DocBook XSL Stylesheets v1.70.1 <http://docbook.sf.net/>
+.\"      Date: 06/04/2006
+.\"    Manual: Linux\-PAM Manual
+.\"    Source: Linux\-PAM Manual
+.\"
+.TH "PAM_NOLOGIN" "8" "06/04/2006" "Linux\-PAM Manual" "Linux\-PAM Manual"
+.\" disable hyphenation
+.nh
+.\" disable justification (adjust text to left margin only)
 .ad l
-.hy 0
-
-/lib/security/pam_nologin
-.sp
-.ad
-.hy
-
+.SH "NAME"
+pam_nologin \- Prevent non\-root users from login
+.SH "SYNOPSIS"
+.HP 15
+\fBpam_nologin.so\fR [file=\fI/path/nologin\fR] [successok]
 .SH "DESCRIPTION"
-
 .PP
-\fBpam_nologin\fR is a PAM module that prevents users from logging 
-into the system when \fI/etc/nologin\fR exists. 
-The contents of the \fI/etc/nologin\fR file are displayed to the user. 
-The \fBpam_nologin\fR module has no effect on the root user's ability to log in.
-
+pam_nologin is a PAM module that prevents users from logging into the system when
+\fI/etc/nologin\fR
+exists. The contents of the
+\fI/etc/nologin\fR
+file are displayed to the user. The pam_nologin module has no effect on the root user's ability to log in.
 .SH "OPTIONS"
-
-.PP
-\fBpam_login\fR has no options.
-
+.TP 3n
+\fBfile=\fR\fB\fI/path/nologin\fR\fR
+Use this file instead the default
+\fI/etc/nologin\fR.
+.TP 3n
+\fBsuccessok\fR
+Return PAM_SUCCESS if no file exists, the default is PAM_IGNORE.
 .SH "MODULE SERVICES PROVIDED"
-
-.TP
-auth
-_authentication and _setcred (blank)
-
-.SH "RETURN CODES"
 .PP
-\fBpam_nologin\fR has the following return codes:
-.TP
-PAM_SUCCESS
-Success: either the user is root or the \fI/etc/nologin\fR file does not exist.
-
-.TP
-PAM_SERVICE_ERR
-The module was unable to get the user name.
-
-.TP
-PAM_USER_UNKNOWN
-The module cannot get the UID associated with this user.
-
-.TP
+The
+\fBauth\fR
+and
+\fBacct\fR
+services are supported.
+.SH "RETURN VALUES"
+.TP 3n
 PAM_AUTH_ERR
-The user is not root and \fI/etc/nologin\fR exists, so the user is 
-not permitted to log in.
-
-.SH "HISTORY"
-
+The user is not root and
+\fI/etc/nologin\fR
+exists, so the user is not permitted to log in.
+.TP 3n
+PAM_BUF_ERR
+Memory buffer error.
+.TP 3n
+PAM_IGNORE
+This is the default return value.
+.TP 3n
+PAM_SUCCESS
+Success: either the user is root or the
+\fI/etc/nologin\fR
+file does not exist.
+.TP 3n
+PAM_USER_UNKNOWN
+User not known to the underlying authentication module.
+.SH "EXAMPLES"
 .PP
-\fBpam_nologin\fR was written by Michael K. Johnson.
-
+The suggested usage for
+\fI/etc/pam.d/login\fR
+is:
+.sp
+.RS 3n
+.nf
+auth  required  pam_nologin.so
+      
+.fi
+.RE
+.sp
+.SH "NOTES"
+.PP
+In order to make this module effective, all login methods should be secured by it. It should be used as a
+\fIrequired\fR
+method listed before any
+\fIsufficient\fR
+methods in order to get standard Unix nologin semantics. Note, the use of
+\fBsuccessok\fR
+module argument causes the module to return
+\fIPAM_SUCCESS\fR
+and as such would break such a configuration \- failing
+\fIsufficient\fR
+modules would lead to a successful login because the nologin module
+\fIsucceeded\fR.
 .SH "SEE ALSO"
-
 .PP
-\fBpam.conf\fR(8), \fBpam.d\fR(8), \fBpam\fR(8), \fBnologin\fR(8).
 
-.SH AUTHOR
-Emily Ratliff.
+\fBnologin\fR(5),
+\fBpam.conf\fR(5),
+\fBpam.d\fR(8),
+\fBpam\fR(8)
+.SH "AUTHOR"
+.PP
+pam_nologin was written by Michael K. Johnson <johnsonm@redhat.com>.
